# portfolio-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_data.example.json
app/: config.py  database.py  dependencies.py  main.py  seed.py
app/auth/: router.py  schemas.py  service.py
app/models/: __init__.py  project.py  skill.py  user.py  work.py
app/routers/: projects.py  skills.py  work.py
app/schemas/: __init__.py  project.py  skill.py  work.py
migrations/: env.py
migrations/versions/: 4f2022b9f3db_create_initial_tables.py
tests/: conftest.py  test_auth.py  test_health.py  test_projects.py  test_skills.py  test_work.py
